log/build_2023-10-30_09-28-04/remote_controller_pkg/stderr.log
  File "/home/bodlaire/Desktop/Work/Mocap/install/remote_controller_pkg/lib/python3.8/site-packages/remote_controller_pkg/remote_node.py", line 104
    def main:
            ^
SyntaxError: invalid syntax

